TMS Attributes management: 1 part - returning to the usage of ids in tms apis (without keys)